Fix about page shifting

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -14,14 +14,14 @@ main {
 	}
 	img {
 		@include media($large-viewport) {
-			@include shift(6);
+			@include shift(7);
 		}
 	}
 	.about {
 		@include media($small-viewport) {
 		}
 		@include media($large-viewport) {
-			@include shift(-11);
+			@include shift(-12);
 		}
 	}
 	h1 {
